--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,33 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Welcome to Index Page</h1>
+    <h1>Welcome to Index Page</h1>
+    <ul>
+        <li><strong>Viet Nam</strong></li>
+        <ol>
+            <li>Ha Noi</li>
+            <li>Sai Gon</li>
+            <li>Hue</li>
+            <li>Da Nang</li>
+        </ol>
+    </ul>
+    <ul>
+        <li><strong>Hoa Ky</strong></li>
+        <ol>
+            <li>New York</li>
+            <li>Los Angeles</li>
+            <li>Chiacgo</li>
+            <li>Houston</li>
+        </ol>
+    </ul>
+    <ul>
+        <li><strong>Trung Quoc</strong></li>
+        <ol>
+            <li>Beijing</li>
+            <li>Chongqing</li>
+            <li>Shanghai</li>
+            <li>Tianjin</li>
+        </ol>
+    </ul>
 </body>
 </html>
