--- a/source/index.html
+++ b/source/index.html
@@ -25,13 +25,15 @@
         </ol>
     </ul>
     <ul>
-        <li><strong>Trung Quoc</strong></li>
-        <ol>
-            <li>Beijing</li>
-            <li>Chongqing</li>
-            <li>Shanghai</li>
-            <li>Tianjin</li>
-        </ol>
+        <li><strong>Trung Quoc</strong>
+            <ol>
+                <li>Beijing</li>
+                <li>Chongqing</li>
+                <li>Shanghai</li>
+                <li>Tianjin</li>
+            </ol>
+        </li>
+
     </ul>
 </body>
 </html>
