--- a/lesson10-for/thuchanh2.html
+++ b/lesson10-for/thuchanh2.html
@@ -5,6 +5,9 @@
     <title>thuc hanh tuan 10</title>
 </head>
 <body>
+<hr style="width: 50px">
+<hr style="width: 10%">
+<hr style="width: 75%">
 <!--    Bai 1-->
 <!--    <script>-->
 <!--        let num  =parseInt(prompt("Enter a number: "));-->
@@ -18,11 +21,11 @@
 <!--    </script>-->
 <!--Bai 2-->
     <script>
-        let i = 1;
-        while (i<100) {
-            document.write("<hr width = " + i +"%>")
-            i++;
-        }
+        // let i = 1;
+        // while (i<100) {
+        //     document.write("<hr width = " + i +"%>")
+        //     i++;
+        // }
     </script>
 
 </body>
