--- a/lesson12-array/thuchanh.html
+++ b/lesson12-array/thuchanh.html
@@ -1,20 +1,39 @@
-<!DOCTYPE html>
+<!--Bai 1-->
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>JS Bin</title>-->
+<!--    <style>-->
+<!--        body {padding-top:50px}-->
+<!--    </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<input type="text" id="txtValue"/>-->
+<!--<input type="button" id="btnAdd" value="Add" onclick="add_element_to_array();"/>-->
+<!--<input type="button" id="btnDisplay" value="Display" onclick="display_array();"/>-->
+<!--<div id="result"></div>-->
+<!--<script src="thuchanh.js">-->
+
+<!--</script>-->
+
+<!--</body>-->
+<!--</html>-->
+
+Bai 2
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JS Bin</title>
-    <style>
-        body {padding-top:50px}
-    </style>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
-<input type="text" id="txtValue"/>
-<input type="button" id="btnAdd" value="Add" onclick="add_element_to_array();"/>
-<input type="button" id="btnDisplay" value="Display" onclick="display_array();"/>
-<div id="result"></div>
-<script src="thuchanh.js">
+    <script src="thuchanh.js">
 
-</script>
+    </script>
 
 </body>
 </html>
